rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__read_failure_retry_focused_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                ┌Directory Not Found───────────────────────────────────┐                                ",
        "                                │                                                      │                                ",
        "                                │  Tab 5, right pane                                   │                                ",
        "                                │                                                      │                                ",
        "                                │  /mnt/backup/photos                                  │                                ",
        "                                │  No such file or directory (os error 2)              │                                ",
        "                                │                                                      │                                ",
        "                                │  It may have been moved, renamed or deleted.         │                                ",
        "                                │                                                      │                                ",
        "                                │                 [Retry]  [*Dismiss*]                 │                                ",
        "                                │                                                      │                                ",
        "                                └──────────────────────────────────────────────────────┘                                ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 52, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 35, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 85, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 35, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 85, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 35, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 85, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 35, y: 21, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 85, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 50, y: 23, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 57, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 59, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 70, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 24, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
