rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__read_failure_unreachable_share_at_startup_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                ┌Directory Unavailable─────────────────────────────────┐                                ",
        "                                │                                                      │                                ",
        "                                │  Tab 5, right pane — while restoring your session    │                                ",
        "                                │                                                      │                                ",
        "                                │  \\192.168.11.24\testfol                             │                                ",
        "                                │  ネットワーク名が見つかりません。 (os error 67)      │                                ", // hidden by multi-width symbols: [(36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " "), (62, " "), (64, " "), (66, " ")]
        "                                │                                                      │                                ",
        "                                │  The share may be offline, or the host unreachable.  │                                ",
        "                                │                                                      │                                ",
        "                                │                 [Retry]  [*Dismiss*]                 │                                ",
        "                                │                                                      │                                ",
        "                                └──────────────────────────────────────────────────────┘                                ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 54, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 35, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 85, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 35, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 85, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 35, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 38, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 40, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 42, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 44, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 46, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 47, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 48, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 50, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 54, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 56, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 58, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 60, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 62, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 65, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 66, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 85, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 35, y: 21, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 85, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 50, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 57, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 59, y: 23, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 70, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 33, y: 24, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 87, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 88, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
