rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__read_failure_unreachable_share_at_startup_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "            ┌Directory Unavailable─────────────────────────────────┐            ",
        "            │                                                      │            ",
        "            │  Tab 5, right pane — while restoring your session    │            ",
        "            │                                                      │            ",
        "            │  \\192.168.11.24\testfol                             │            ",
        "            │  ネットワーク名が見つかりません。 (os error 67)      │            ", // hidden by multi-width symbols: [(16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " ")]
        "            │                                                      │            ",
        "            │  The share may be offline, or the host unreachable.  │            ",
        "            │                                                      │            ",
        "            │                 [Retry]  [*Dismiss*]                 │            ",
        "            │                                                      │            ",
        "            └──────────────────────────────────────────────────────┘            ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 34, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 7, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 15, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 65, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 15, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 65, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 15, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 18, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 20, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 22, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 24, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 26, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 28, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 30, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 32, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 34, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 38, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 40, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 42, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 44, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 46, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 47, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 65, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 15, y: 13, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 65, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 30, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 37, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 39, y: 15, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 50, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 67, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 68, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
